--- a/brundy_bridger.assignment-03/CHANGELOG
+++ b/brundy_bridger.assignment-03/CHANGELOG
@@ -1,4 +1,6 @@
 Change Log
+Feb 26: Added in hardness dixtra as well as printing the player red hope it hepls :)
+Feb 25: Made basic dixtra
 Feb 12: Finished reading and made writing then tested on instructor set
 Feb 11: Started making reading
 Feb 1: Created helper geometry files with structs Point and Rectangle
