--- a/brundy_bridger.assignment-04/CHANGELOG
+++ b/brundy_bridger.assignment-04/CHANGELOG
@@ -1,4 +1,6 @@
 Change Log
+Mar 5: Full dungeon simulation everything moves!
+Mar 4: Added monster types and movement
 Feb 26: Added in hardness dixtra as well as printing the player red hope it hepls :)
 Feb 25: Made basic dixtra
 Feb 12: Finished reading and made writing then tested on instructor set
