--- a/brundy_bridger.assignment-06/README
+++ b/brundy_bridger.assignment-06/README
@@ -10,6 +10,7 @@ dungeon conforming to the project specifications:
 Runs dungeon and displays through ncurses:
  - Input: player movement, goto and fogofwar
  - Different monster (npcs) that move acording to their assigned traits
+ - Has class Dungeon no longer a struct
 
 Key functions:
 - updateDungeon(), gotoMode(), simulateMonsters(), dungeonDijkstraNonTunnel(), DungeonDijkstraTunnel(), generateDungeon(), renderDungeon(), readDungeon() and loadDungeon()
