--- a/brundy_bridger.assignment-06/README
+++ b/brundy_bridger.assignment-06/README
@@ -7,12 +7,10 @@ some times there will be free floors (no monsters :D yay not a bug)
 if monsters dont update they may be stone try moving to new level
 
 dungeon conforming to the project specifications:
-Runs dungeon and displays through ncurses:
- - Input: player movement, goto and fogofwar
- - Different monster (npcs) that move acording to their assigned traits
- - Has class Dungeon no longer a struct
+Takes input of monster definitions then outputs monster definitions
 
 Key functions:
+You onlu need monsterParser.h/cpp, npc.h/cpp and dice.hpp
 - updateDungeon(), gotoMode(), simulateMonsters(), dungeonDijkstraNonTunnel(), DungeonDijkstraTunnel(), generateDungeon(), renderDungeon(), readDungeon() and loadDungeon()
 - File names: dungeon.hpp, dungeon.cpp, rectangle.hpp, point.hpp, fileHandler.hpp. fileHandler.cpp, heap.hpp, heap.cpp, simulate.cpp, simulate.hpp
 
